--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "file.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node_modules/babel-cli/bin/babel-node.js puppeteer.js"
+  },
+  "babel": {
+    "plugins": ["transform-async-to-generator"]
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-register": "^6.26.0",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
     "puppeteer": "^1.0.0"
-  },
+  }
 }
